语言包生成函数优化，去除webbundlekey

--- a/src/Classroom/ClassroomBundle/Resources/translations/messages.en_US.yml
+++ b/src/Classroom/ClassroomBundle/Resources/translations/messages.en_US.yml
@@ -1,93 +1,36 @@
-购买%name%: Buy %name%
-'加入学习': 'Join'
-'注意：请在30分钟内完成支付，否则订单将会过期失效': 'Note: Please finish payment with 30 minutes, otherwise the order will expire.'
+购买%name%: 'Buy %name%'
 '%name%名称': '%name% name'
-'价格': 'Price'
-'会员免费': 'Free for VIP'
-'元': ' RMB Yuan'
-'您还没有头像，设置以后才能加入学习': 'Please setup your avator to join the course.'
-'拥有一个独有的头像，老师和同学们能更容易关注到你哦～～': 'Setting up a unique avator will improve your visibility to others. '
-点击设置: Settings
 '此%name%为免费%classroomName%，无需购买，可直接加入学习。': 'This %name% is a free %classroomName%, you can join to study directly.'
 '预览模式无法支付%role%': 'Cannot pay %role% in preview mode.'
-去支付: Go to Pay
 '正在加入...': 'Joining ...'
-正在创建订单...: Creating order ...
+正在创建订单...: 'Creating order ...'
 '预览模式无法加入学习%role%': 'Cannot join %role% in preview mode.'
-'继续学习': 'Continue'
-'立即加入': 'Join Now'
 '共有<span>%courseNum%</span>门课程': 'Total number of courses: <span>%courseNum%</span>'
-所属%name%: In %name%
-我的话题: My Topic
-问答帖: Q&A
-问: Ask
-精华帖: Digest
-精: Digest
-发表于%name%: Posted at %name%
-'已删除': 'Deleted'
-最后回复: Last reply
-浏览: View
-'你还没提过问题': 'You haven''t asked any question.'
-'你还没发表过话题': 'You haven''t posted any topic.'
-'你还没有发表过话题': 'You haven''t posted any topic.'
+发表于%name%: 'Posted at %name%'
+'已删除': Deleted
 '您的退款申请已提交，请等待管理员的处理。': 'Your refund request has been sumbitted, please wait for processing.'
-'取消退款，继续学习！': 'Cancel refund and continue learning.'
-首页: Home
-'已关闭': 'Closed'
-'扫二维码继续学习': 'Scan QR code to resume the course'
-评价: Review
-'价格：': 'Price: '
-'免费': 'Free'
-学员: Student
-课程: Course
-分享: Share
 会员%name%: 会员%name%
 承诺服务: 承诺服务
 '%name%管理': '%name%管理'
 您现在是: 您现在是
-旁听生: 旁听生
 '，不能完整学习': '，不能完整学习'
 '旁听生只能参与话题讨论，正式学员可以完整地学习所有内容，享受所有教学服务': '旁听生只能参与话题讨论，正式学员可以完整地学习所有内容，享受所有教学服务'
 '立即加入购买': '立即加入购买'
-收费: 收费
 订单名称：: 订单名称：
-订单号：: 订单号：
-'订单价格：': '订单价格：'
 原价：: 原价：
-'全部课程': '全部课程'
-排序：: 排序：
-最新笔记: 最新笔记
-点赞最多: 点赞最多
 '暂无课程内容': '暂无课程内容'
-'%lessonNum%课时': '%lessonNum%课时'
 已购买: 已购买
 未学: 未学
-已学完: 已学完
-'学习中': '学习中'
 介绍: 介绍
-话题: 话题
-笔记: 笔记
 师资: 师资
-'公告': '公告'
-',''}}{{ categoryParent.name|default('''') }}{% endif %}{% else %}{{''全部': ',''}}{{ categoryParent.name|default('''') }}{% endif %}{% else %}{{''全部'
 '%name%列表': '%name%列表'
-查看课程: 查看课程
-最新: 最新
-最热: 最热
-推荐: 推荐
-'全部': '全部'
 '免费%name%': '免费%name%'
 '目前暂时无%name%': '目前暂时无%name%'
-提示: 提示
 课程已从%name%中移除: 课程已从%name%中移除
 还不是%name%成员: 还不是%name%成员
 '请先': '请先'
 '加入%name%': '加入%name%'
-'关闭': '关闭'
-'暂无介绍': '暂无介绍'
 '新加学员': '新加学员'
-我的%name%: 我的%name%
-未发布: 未发布
 已学了%day%天: 已学了%day%天
 '进入%name%': '进入%name%'
 已学%number%课程: 已学%number%课程
@@ -123,77 +66,40 @@
 '24小时阅卷点评': '24小时阅卷点评'
 '24小时内批阅您提交的试卷，给予有针对性的点评': '24小时内批阅您提交的试卷，给予有针对性的点评'
 试: 试
-就业指导: 就业指导
 '完成全部学习后，老师对您的学习成果和能力水平给出评估，并提供专业化的就业指导': '完成全部学习后，老师对您的学习成果和能力水平给出评估，并提供专业化的就业指导'
 业: 业
-收起: 收起
-重新评价: 重新评价
-请打分：: 请打分：
 只能有限参与: 只能有限参与
 '购买成为正式学员后即可完整学习': '购买成为正式学员后即可完整学习'
 '成为正式学员后即可完整学习': '成为正式学员后即可完整学习'
 'now''|date(''m'') }}{{''月': 'now''|date(''m'') }}{{''月'
 'now''|date(''d'') }}{{''日': 'now''|date(''d'') }}{{''日'
 签到: 签到
-已签到: 已签到
 连续%keepDays%天: 连续%keepDays%天
-日: 日
-一: 一
-二: 二
-三: 三
-四: 四
-五: 五
-'六': '六'
 签到排名：今日第: 签到排名：今日第
 个签到: 个签到
 今日签到人数：: 今日签到人数：
 连续签到：: 连续签到：
-天: 天
-班主任: 班主任
-教师: 教师
-助教: 助教
-'暂无头衔': '暂无头衔'
-'暂无简介': '暂无简介'
-'关注': '关注'
-'已关注': '已关注'
-私信: 私信
 还没有头衔: 还没有头衔
 该%name%尚未设置班主任: 该%name%尚未设置班主任
 指定班级: 指定班级
-'标题': '标题'
-搜索: 搜索
-编号: 编号
-名称: 名称
-数: 数
-状态: 状态
-操作: 操作
-分类：: 分类：
 '荐:': '荐:'
-选择: 选择
 '暂无%classroomName%记录': '暂无%classroomName%记录'
 创建%name%: 创建%name%
 '%name%展示': '%name%展示'
-开启: 开启
 '关闭后，%name%将彻底隐藏，无法在前台查看到。': '关闭后，%name%将彻底隐藏，无法在前台查看到。'
 '%name%购买': '%name%购买'
 '关闭后%name%将无法在线购买加入。': '关闭后%name%将无法在线购买加入。'
-正在创建: 正在创建
-创建: 创建
 班级编号: 班级编号
 课程数: 课程数
 学员数: 学员数
 '暂无%name%信息!': '暂无%name%信息!'
 顺序号: 顺序号
-创建时间: 创建时间
 推荐时间: 推荐时间
 '暂无推荐%name%': '暂无推荐%name%'
 设置推荐%name%: 设置推荐%name%
 序号: 序号
 '请输入0-10000的整数': '请输入0-10000的整数'
 '请输入0-10000的整数(默认序号是100)': '请输入0-10000的整数(默认序号是100)'
-正在提交: 正在提交
-保存: 保存
-取消: 取消
 设置序号: 设置序号
 取消%name%推荐: 取消%name%推荐
 取消推荐: 取消推荐
@@ -202,16 +108,10 @@
 '请注意：以下设置涉及到班级的基本运作模式，请谨慎设置，且不要经常性变更！': '请注意：以下设置涉及到班级的基本运作模式，请谨慎设置，且不要经常性变更！'
 课程重合时折价购买: 课程重合时折价购买
 '学员在购买班级之前，如果已经购买了某个课程，班级价格将会扣除该课程的售价': '学员在购买班级之前，如果已经购买了某个课程，班级价格将会扣除该课程的售价'
-提交: 提交
-分类: 分类
 荐: 荐
-'详情': '详情'
 '原价 %coinPriceAll% %coinname%': '原价 %coinPriceAll% %coinname%'
 '原价 %priceAll%元': '原价 %priceAll%元'
-已发布: 已发布
-编辑: 编辑
 管理%name%: 管理%name%
-推荐%name%: 推荐%name%
 '关闭%name%(%title%)': '关闭%name%(%title%)'
 '关闭%name%': '关闭%name%'
 发送发布%name%(%title%)通知短信: 发送发布%name%(%title%)通知短信
@@ -220,32 +120,17 @@
 发布%name%: 发布%name%
 '删除%name%(%title%)': '删除%name%(%title%)'
 '删除%name%': '删除%name%'
-'关键词': '关键词'
 '作者': '作者'
 帖子: 帖子
 回复/查看: 回复/查看
-展开: 展开
-'删除': '删除'
 '暂无帖子记录': '暂无帖子记录'
-'全选': '全选'
 助教设置: 助教设置
 设置助教: 设置助教
-'添加': '添加'
 助教可在【%name%管理】中批改%classroom%作业和试卷，并且可以在%classroomName%讨论区创建活动: 助教可在【%name%管理】中批改%classroom%作业和试卷，并且可以在%classroomName%讨论区创建活动
 旁听生管理: 旁听生管理
 '旁听生是%name%的潜在购买者,只能参加该%classroomName%下的话题互动。': '旁听生是%name%的潜在购买者,只能参加该%classroomName%下的话题互动。'
-'请输入用户名/邮箱/手机号': '请输入用户名/邮箱/手机号'
-'无学员记录': '无学员记录'
-选择课程: 选择课程
 '加入%name%的课程为选中的原课程复制生成，并与原课程实时同步更新。如需解除同步，请对该课程进行编辑。': '加入%name%的课程为选中的原课程复制生成，并与原课程实时同步更新。如需解除同步，请对该课程进行编辑。'
-课程名称: 课程名称
-课程管理: 课程管理
 '添加课程': '添加课程'
-更新中: 更新中
-已完结: 已完结
-正在直播中: 正在直播中
-直播: 直播
-第%number%课时: 第%number%课时
 '%lessonNum%个课时': '%lessonNum%个课时'
 '有效期:': '有效期:'
 '永久': '永久'
@@ -254,41 +139,23 @@
 保存修改: 保存修改
 '赶紧添加课程吧！': '赶紧添加课程吧！'
 '添加学员': '添加学员'
-邮箱/手机/用户名: 邮箱/手机/用户名
-'只能添加系统中已注册的用户': '只能添加系统中已注册的用户'
-'购买价格': '购买价格'
-备注: 备注
-选填: 选填
 '%status%%name%不能添加学员，请%classroomName%发布后再添加。': '%status%%name%不能添加学员，请%classroomName%发布后再添加。'
 正在保存...: 正在保存...
 返回%name%主页: 返回%name%主页
-预览: 预览
 作为未购买用户: 作为未购买用户
 作为旁听生: 作为旁听生
 作为正式学员: 作为正式学员
-发布: 发布
 '%unsetted%还未设置': '%unsetted%还未设置'
 确定要发布吗？: 确定要发布吗？
-确定: 确定
 班主任设置: 班主任设置
 设置班主任: 设置班主任
 '班主任负责管理整个%name%，班主任只有一位，并且必须要由老师来担任。': '班主任负责管理整个%name%，班主任只有一位，并且必须要由老师来担任。'
-作业批改: 作业批改
 未批改: 未批改
 已批改: 已批改
-'选择要导入的文件': '选择要导入的文件'
-点击下载示例说明文件: 点击下载示例说明文件
-'支持从Excel文件导入': '支持从Excel文件导入'
-管理: 管理
-设置: 设置
-简介: 简介
 未设置: 未设置
-图片: 图片
 课时数: 课时数
 旁听生数: 旁听生数
 '%name%学习情况': '%name%学习情况'
-昨日: 昨日
-今日: 今日
 '全部学员数': '全部学员数'
 正式学员数: 正式学员数
 '课时完成学习数': '课时完成学习数'
@@ -296,15 +163,9 @@
 最新评价: 最新评价
 '该%name%尚无评价': '该%name%尚无评价'
 管理首页: 管理首页
-基本信息: 基本信息
 未完善: 未完善
-'价格设置': '价格设置'
-封面图片: 封面图片
 服务设置: 服务设置
-教师设置: 教师设置
 '学习计划': '学习计划'
-提示：请选择图片裁剪区域。: 提示：请选择图片裁剪区域。
-重新选择图片: 重新选择图片
 学员备注: 学员备注
 请填写学员的备注信息: 请填写学员的备注信息
 提供的服务: 提供的服务
@@ -312,37 +173,22 @@
 '24小时内批阅您提交的试卷，给予有针对性的点评。': '24小时内批阅您提交的试卷，给予有针对性的点评。'
 '对于提问做到有问必答，帮您扫清学习过程中的种种障碍。': '对于提问做到有问必答，帮您扫清学习过程中的种种障碍。'
 提供专属的一对一在线答疑，快速答疑解惑。: 提供专属的一对一在线答疑，快速答疑解惑。
-活动: 活动
 '不定期组织各种线上或线下的%name%活动，让学习更加生动有趣，同学关系更为紧密。': '不定期组织各种线上或线下的%name%活动，让学习更加生动有趣，同学关系更为紧密。'
 '完成全部学习后，老师对您的学习成果和能力水平给出评估，并提供专业化的就业指导。': '完成全部学习后，老师对您的学习成果和能力水平给出评估，并提供专业化的就业指导。'
-购买: 购买
 '你可以上传jpg, gif, png格式的文件, 图片建议尺寸至少为525x350。': '你可以上传jpg, gif, png格式的文件, 图片建议尺寸至少为525x350。'
-'文件大小不能超过': '文件大小不能超过'
 '上传新图片': '上传新图片'
-'价格(元)': '价格(元)'
 '当前共有 %courseNum% 个课程，原价共计 %price% 元。': '当前共有 %courseNum% 个课程，原价共计 %price% 元。'
 相当于: 相当于
 '会员免费学': '会员免费学'
-学员管理: 学员管理
-'学习进度': '学习进度'
 导出旁听生: 导出旁听生
-'批量导入': '批量导入'
 导出学员: 导出学员
-正式学员: 正式学员
 教师不存在: 教师不存在
 教师管理: 教师管理
 设置教师: 设置教师
 '相关页面中的老师列举将会按照这里设定的顺序显示。': '相关页面中的老师列举将会按照这里设定的顺序显示。'
 '教学服务团队成员有权制订学习计划、答疑、批改作业/试卷、发起活动。': '教学服务团队成员有权制订学习计划、答疑、批改作业/试卷、发起活动。'
 还没有教师!赶紧去设置课程吧！: 还没有教师!赶紧去设置课程吧！
-'试卷批阅': '试卷批阅'
-'我的批阅': '我的批阅'
-'未批阅': '未批阅'
-'已批阅': '已批阅'
 '加入时间': '加入时间'
-发私信: 发私信
-查看资料: 查看资料
-移除: 移除
 '%classroomName%名': '%classroomName%名'
 '评价内容关键词': '评价内容关键词'
 '评价内容': '评价内容'
@@ -351,19 +197,8 @@
 星: 星
 '暂无评价记录': '暂无评价记录'
 '您尚未成为%classroom%成员，请先成为%classroom.name%成员。': '您尚未成为%classroom%成员，请先成为%classroom.name%成员。'
-'加入旁听生': '加入旁听生'
-发表: 发表
-发话题: 发话题
-提问题: 提问题
 建活动: 建活动
-问答: 问答
-精华: 精华
-最新发帖: 最新发帖
-编辑帖子: 编辑帖子
-回复帖子: 回复帖子
-'查看全部': '查看全部'
 只看老师: 只看老师
-'话题作者': '话题作者'
 活动发起人: 活动发起人
 班级管理: 班级管理
 班级推荐: 班级推荐
@@ -371,9 +206,7 @@
 班级话题: 班级话题
 班级订单: 班级订单
 班级退款管理: 班级退款管理
-班级: 班级
 班级评价: 班级评价
-'非常抱歉，您无权限访问该%classroomName%，如有需要请联系客服': '非常抱歉，您无权限访问该%classroomName%，如有需要请联系客服'
 班级设置成功！: 班级设置成功！
 用户未登录，创建班级失败。: 用户未登录，创建班级失败。
 '只允许管理员创建班级!': '只允许管理员创建班级!'
@@ -382,29 +215,14 @@
 恭喜！创建班级成功！: 恭喜！创建班级成功！
 '非常抱歉，您无权限访问该%title%，如有需要请联系客服': '非常抱歉，您无权限访问该%title%，如有需要请联系客服'
 您不是班级的学员。: 您不是班级的学员。
-'有关联的订单，不能直接退出学习。': '有关联的订单，不能直接退出学习。'
-组合购买课程不能退出。: 组合购买课程不能退出。
-'你好像忘了登录哦？': '你好像忘了登录哦？'
 '非常抱歉，该%title%不允许加入，如有需要请联系客服': '非常抱歉，该%title%不允许加入，如有需要请联系客服'
-用户未登录，不能购买。: 用户未登录，不能购买。
 '%title%不存在，不能购买。': '%title%不存在，不能购买。'
-您不是老师，不能查看此页面！: 您不是老师，不能查看此页面！
-订单不存在!: 订单不存在!
-找不到要购买的班级!: 找不到要购买的班级!
 用户%nickname%不存在: 用户%nickname%不存在
-'用户已经是学员，不能添加！': '用户已经是学员，不能添加！'
 '购买%classroomName%《%title%》(管理员添加)': '购买%classroomName%《%title%》(管理员添加)'
 '班级《%title%》(#%classroomId%)，添加学员%nickname%(#%userId%)，备注：%remark%': '班级《%title%》(#%classroomId%)，添加学员%nickname%(#%userId%)，备注：%remark%'
-该用户不存在: 该用户不存在
 该用户已是本班级的学员了: 该用户已是本班级的学员了
-女: 女
-男: 男
-秘密: 秘密
-微博: 微博
-'用户名,Email,加入学习时间,学习进度,姓名,性别,QQ号,微信号,手机号,公司,职业,头衔': '用户名,Email,加入学习时间,学习进度,姓名,性别,QQ号,微信号,手机号,公司,职业,头衔'
 保存成功！: 保存成功！
 基本信息设置成功！: 基本信息设置成功！
-设置成功！: 设置成功！
 课程修改成功: 课程修改成功
 '课程添加成功': '课程添加成功'
 '未发布班级不能导入学员!': '未发布班级不能导入学员!'
@@ -414,26 +232,17 @@
 '无权限创建活动!': '无权限创建活动!'
 '无权限创建话题!': '无权限创建话题!'
 帖子已不存在: 帖子已不存在
-'用户没有登录!不能加入活动!': '用户没有登录!不能加入活动!'
 '不是本班成员!不能加入活动!': '不是本班成员!不能加入活动!'
-'%field%字段不允许增减，只有%fields%才被允许增减': '%field%字段不允许增减，只有%fields%才被允许增减'
-用户未登录，不能创建订单: 用户未登录，不能创建订单
-订单数据缺失，创建课程订单失败。: 订单数据缺失，创建课程订单失败。
 已经是班级学员，创建订单失败。: 已经是班级学员，创建订单失败。
 班级不存在，创建课程订单失败。: 班级不存在，创建课程订单失败。
 '该班级是封闭班级，学员不能自行加入！': '该班级是封闭班级，学员不能自行加入！'
 购买%classroomName%《%title%》: 购买%classroomName%《%title%》
 创建订单失败！: 创建订单失败！
-'非课程订单，加入课程失败。': '非课程订单，加入课程失败。'
 当前用户已经是%name%学员，支付宝支付成功。: 当前用户已经是%name%学员，支付宝支付成功。
-订单不存在，不能申请退款。: 订单不存在，不能申请退款。
 用户%nickname%申请退款: 用户%nickname%申请退款
 '%name%，请审核。': '%name%，请审核。'
-订单不存在，取消退款申请失败。: 订单不存在，取消退款申请失败。
-参数不正确，评价失败！: 参数不正确，评价失败！
 '班级(#%classroomId%)不存在，评价失败！': '班级(#%classroomId%)不存在，评价失败！'
 '用户(#%userId%)不存在,评价失败!': '用户(#%userId%)不存在,评价失败!'
-'评价(#%id%)不存在，删除失败！': '评价(#%id%)不存在，删除失败！'
 参数不正确，更新失败！: 参数不正确，更新失败！
 班级不存在，操作失败。: 班级不存在，操作失败。
 '只有未发布班级可以删除，操作失败。': '只有未发布班级可以删除，操作失败。'
@@ -453,14 +262,8 @@
 '用户(#%userId%)不是班级(#%classroomId%)的学员，封锁学员失败。': '用户(#%userId%)不是班级(#%classroomId%)的学员，封锁学员失败。'
 '用户(#%userId%)不是该班级(#%classroomId%)的学员，解封学员失败。': '用户(#%userId%)不是该班级(#%classroomId%)的学员，解封学员失败。'
 推荐班级序号只能为数字！: 推荐班级序号只能为数字！
-'未登录用户，无权操作！': '未登录用户，无权操作！'
-'您不是管理员，无权操作！': '您不是管理员，无权操作！'
-'已优惠': '已优惠'
-'去学习': '去学习'
-真的要取消退款吗？: 真的要取消退款吗？
 确定退出班级吗？: 确定退出班级吗？
 '该用户已添加，不能重复添加！': '该用户已添加，不能重复添加！'
-'上传成功！': '上传成功！'
 '添加%username%操作成功!': '添加%username%操作成功!'
 '添加%username%操作失败!': '添加%username%操作失败!'
 备注%username%成功: 备注%username%成功
@@ -469,9 +272,6 @@
 移除%username%成功！: 移除%username%成功！
 移除%username%失败，请重试！: 移除%username%失败，请重试！
 指定班级成功: 指定班级成功
-吗？: 吗？
-成功！: 成功！
-失败: 失败
 '真的要删除该班级吗？': '真的要删除该班级吗？'
 '删除成功！': '删除成功！'
 长度为2-30位: 长度为2-30位
