--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -3190,4 +3190,34 @@ Flash: Flash
 'Account #%userId% is not exist.': 'Account #%userId% is not exist.'
 'message must be a string': 'message must be a string'
 'UNKNOWN IMPORTER TYPE: %importerType%': 'UNKNOWN IMPORTER TYPE: %importerType%'
-'请输入 %display%': '请输入 %display%'
+'请输入%display%': '请输入%display%'
+'%display%必须是数字': '%display%必须是数字'
+'%display%不能全为数字': '%display%不能全为数字'
+'%display%请输入可见性字符': '%display%请输入可见性字符'
+'%display%的长度必须小于等于%max%字符,一个中文为2个字符': '%display%的长度必须小于等于%max%字符,一个中文为2个字符'
+'%display%必须是中文字': '%display%必须是中文字'
+'请输入有效的%display%': '请输入有效的%display%'
+'%display%必须是中文字、英文字母、数字及下划线组成': '%display%必须是中文字、英文字母、数字及下划线组成'
+'%display%必须是5位数字、英文字母组成': '%display%必须是5位数字、英文字母组成'
+'%display%必须是英文字母、数字及下划线组成': '%display%必须是英文字母、数字及下划线组成'
+'%display%必须以英文字母或下划线开头': '%display%必须以英文字母或下划线开头'
+'%display%的长度必须大于等于%min%，一个中文字算2个字符': '%display%的长度必须大于等于%min%，一个中文字算2个字符'
+'请输入合法的%display%,如:200, 221.99, 0.99, 0等': '请输入合法的%display%,如:200, 221.99, 0.99, 0等'
+'%display%的长度必须小于等于%max%，一个中文字算2个字符': '%display%的长度必须小于等于%max%，一个中文字算2个字符'
+'%display%格式不正确': '%display%格式不正确'
+'%display%只能由4-20个字符组成': '%display%只能由4-20个字符组成'
+秒数只能在0-59之间: 秒数只能在0-59之间
+'请输入正确的日期,格式如XXXX-MM-DD': '请输入正确的日期,格式如XXXX-MM-DD'
+'%display%必须为整数': '%display%必须为整数'
+'请输入正确的小数,只保留到两位小数': '请输入正确的小数,只保留到两位小数'
+'请输入正确的小数,只保留到一位小数': '请输入正确的小数,只保留到一位小数'
+'%display%必须为整数,最大到9位整数': '%display%必须为整数,最大到9位整数'
+'%display%必须为正整数': '%display%必须为正整数'
+'%display%必须为正数': '%display%必须为正数'
+'必须在0~100之间': '必须在0~100之间'
+'{{display}}必须小于2M': '{{display}}必须小于2M'
+'开始时间必须小于或等于结束时间': '开始时间必须小于或等于结束时间'
+'请输入正确的日期和时间,格式如XXXX-MM-DD hh:mm:ss': '请输入正确的日期和时间,格式如XXXX-MM-DD hh:mm:ss'
+结束时间不能早于或等于开始时间: 结束时间不能早于或等于开始时间
+'有效期必须大于等于当前日期': '有效期必须大于等于当前日期'
+'%display%的长度必须等于%length%': '%display%的长度必须等于%length%'
