翻译条目完善

--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -3245,7 +3245,7 @@ mp3: mp3
 我正在「%groupname%」小组，看到「%threadname%」，很不错哦，一起来看看吧！: I'm now part of the group「%groupname%」,and check out 「%threadname%」,it's really fantastic ,come and join with me!
 小组频道: Groups
 搜索小组: Search a group
-' 将学校装进口袋，移动学习，随时随地。': ' A whole knowledge base right in your pocket.Enjoy knowledge no mater wherever you are'
+' 将学校装进口袋，移动学习，随时随地。': ' A whole knowledge base right in your pocket.Enjoy knowledge no matter where you are'
 系统: System
 '无解析': 'Parse failed'
 '<span class="text-muted">未回答</span>': '<span class="text-muted">unanswered</span>'
