--- a/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
+++ b/src/Topxia/WebBundle/Resources/translations/messages.en_US.yml
@@ -69,6 +69,7 @@
 '可用于抵扣全站会员': 'For any level of VIP membership'
 用于抵扣指定会员: 'For specified level of VIP membership'
 '可用于抵扣全站所有类型消费': 'For any purchase on our web site'
+折: 折
 有效期截止：: 'Expired on: '
 '%deadline%年': '%deadline% Year'
 '%deadline%月': '%deadline% Month'
@@ -420,8 +421,10 @@
 支持: Suport
 'mp3, mp4, avi, flv, wmv, mov, ppt, pptx, pdf, doc, docx, swf': 'mp3, mp4, avi, flv, wmv, mov, ppt, pptx, pdf, doc, docx, swf '
 '格式的文件上传，文件大小不能超过': 'format and the file size can not exceed '
+'1 GB': '1 GB'
 '视频将上传到': 'Video will be uploaded to '
 '云服务器''}}</strong>{{''，上传之后会对视频进行格式转换，转换过程需要一定的时间，在这个过程中视频将无法播放。': 'Cloud server''}}</strong>{{''，The uploaded video will be transcoded and will be able to play during the process.'
+'mp4, mp3': 'mp4, mp3'
 '格式的文件上传，且文件大小不能超过': ' format and the file size can not exceed '
 'MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。': 'MP4 video should be transcoded using AVC(H264) encoder, or the video cannot played in the browser.'
 网站服务器: 'Website server'
@@ -527,11 +530,13 @@ flash课程: 'Courses in flash video format'
 从资料库中选择: 'Select from the library'
 从课程文件中选择: 'Select from course documents'
 '导入网络视频': 'Import video clips from the internet'
+'mp4, avi, flv, wmv, mov, m4v': 'mp4, avi, flv, wmv, mov, m4v'
 '格式的视频文件上传，文件大小不能超过<strong>2 GB</strong>。': 'The size of the uploading video can not exceed <strong>2 GB</strong>'
 '断点续传': 'Multithreading breakpoint transmissionM'
 '（仅支持HTML5浏览器）。': '(Only supports HTML5 browser)'
 云视频服务器: 'cloud-video server'
 '，上传之后会对视频进行格式转换，转换过程需要一定的时间，在这个过程中视频将无法播放。': 'The video will be transcoded which takes some time and the video is not accessible during the proccess.'
+mp4: mp4
 '格式的视频文件上传，文件大小不能超过': 'The size of the uploading video can not exceed'
 '。MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。': 'MP4 video should be transcoded using AVC(H264) encoder ,or the video will not be playable by the browser'
 '。如需使用%Edusoho%云视频,点击': '，to use %Edusoho% cloud-video feature ,click on the'
@@ -542,16 +547,20 @@ flash课程: 'Courses in flash video format'
 '导入': Import
 '腾讯和网易的视频不支持手机端播放': 'Videos from Tencent and Netease  is not supported on mobile'
 '上传音频': 'Upload audio'
+mp3: mp3
 '格式的音频文件上传，且文件大小不能超过': 'The  size of the audio can not exceed'
+500M: 500M
 '音频将上传到': 'Upload audio files to'
 云服务器: 'Cloud server'
 ，%Edusoho%点击: '，%Edusoho% click'
 '暂无音频文件，请先上传。': 'No audio file ,please upload'
+'ppt, pptx': 'ppt, pptx'
 '格式的PPT文件上传，且文件大小不能超过': 'Upload PPT and the file size can not exceed'
 '100 MB': 100MB
 'PPT将上传到': 'Upload PPT file to'
 '暂无PPT文件，请先上传。': 'No PPT file , please upload'
 '上传文档': 'Upload a document'
+'pdf,doc,docx': 'pdf,doc,docx'
 '格式的文档上传，且文件大小不能超过': 'Upload document and the file size can not exceed'
 '文档将上传到': 'Upload document file to'
 '暂无文档，请先上传。': 'No document file ,please upload'
@@ -624,6 +633,7 @@ flash课程: 'Courses in flash video format'
 重新选择图片: 'Reselect an image'
 '你可以上传jpg, gif, png格式的文件, 图片建议尺寸至少为480x270。': 'You can upload jpg, gif, png format, image size is recommended at least 480x270.'
 '文件大小不能超过': 'File size can not exceed'
+2M: 2M
 '选择要上传的图片': 'Select an image to upload'
 '%coin_name%价格': '%coin_name%Price'
 '当前课程正处于「 %name% 」打折活动中。': 'This course is in promotion「 %name% 」.'
@@ -1761,23 +1771,61 @@ Email地址: 'Email Address'
 '''}}{% endif %}{{''%nickname%的个人主页': '''}}{% endif %}{{''%nickname% ''s homepage'
 个人介绍: Introduction
 在学%name%: 'Learning %name%'
+'流畅 <span class="text-muted">(适合PPT讲解)</span>': 'Smooth <span class="text-muted">(Suitable for PPT illustration)</span>'
+'标准 <span class="text-muted">(适合屏幕录制、摄像头拍摄)</span>': 'Standard <span class="text-muted">(Suitable for screen recording or camera capturing)</span>'
+'精细 <span class="text-muted">(适合动态电影)</span>': 'High-quality <spanS class="text-muted">(Suitable for motion pictures)</span>'
 高品: 'High Quality'
+最近一周: 'Last week'
+最近两周: 'Two Weeks before'
+最近一个月: 'Last month'
+最近两个月: 'Two months before'
+最近三个月: 'Three months before'
 开启: 'On'
 文件: file
 非连载课程: 'Non Serial'
+是: 'Yes'
+否: 'No'
 支付宝: Alipay
+'其他支付': 'Other payment'
+'购买者用户名': 'Buyer''s Name'
 简单: Easy
 一般: Normal
 困难: Difficult
+随机生成: 'Created randomly'
+按难易程度: 'According to difficulty'
+整个课程: 'The whole course'
+按课时范围: 'According to lesson''s category'
+提示信息: Tips
+警告信息: Attention
 错误提示: 'Error message'
+我要提问: 'Ask a question'
+'详细描述你的问题': 'Describe your question in detail.'
+'请输入私信内容': 'Please enter content for the private message.'
+收信人用户名: 'Recipent''s Username'
+想要说的话: 'what to say'
 网银支付: 'E-currency payment'
 快捷支付: 'Quick payment'
 班级: Class
+资讯频道: 'News channel'
+可用: Accessible
 虚拟币: 'virtual currency'
+'我正在学习《%course%》，收获巨大哦，一起来学习吧！': 'I''m learning 《%course%》，it''s really rewarding,let''s keep learning together!'
+'我正在学习「%classroom%」，收获巨大哦，一起来学习吧！': 'I''m learning 「%classroom%」,it''s really rewarding，let''s keep learning together!'
+'我正在看「%articletitle%」，关注「%sitename%」，分享知识，成就未来。': 'I''m eenjoying「%articletitle%」,please follow「%sitename%」; Sharing knowledge makes a better future!'
+我正在「%groupname%」小组，看到「%threadname%」，很不错哦，一起来看看吧！: 'I''m now part of the group「%groupname%」,and check out 「%threadname%」,it''s really fantastic ,come and join with me!'
 '尚未开启支付模块，无法购买课程。': 'The payment feature is not enabled, cannot finish the purchase.'
+小组频道: Groups
+搜索小组: 'Search a group'
+' 将学校装进口袋，移动学习，随时随地。': ' A whole knowledge base right in your pocket.Enjoy knowledge no matter where you are'
+系统: System
+'无解析': 'Parse failed'
+'<span class="text-muted">未回答</span>': '<span class="text-muted">unanswered</span>'
 抵价: 'trade in'
 打折: discount
 已领取: got
+PPT: PPT
+Flash: Flash
+'--': '--'
 '苹果应用内支付': 'Apple in-app purchase'
 站外支付: 'payment out of website'
 '文章': article
@@ -2195,6 +2243,7 @@ token已失效: 'token expired'
 用户还未登录!: 'You are not signed in.'
 帖子不存在!: 'The post does not exist.'
 '无权限操作!': 'No permission'
+'%threadtitle%-成员.xls': '%threadtitle%-member.xls'
 报名时间: 'Register date'
 成员: Member
 '上传授权码不正确，请重试！': 'Invalid upload authorization code, please try again.'
@@ -2274,6 +2323,7 @@ groupId参数缺失: 'Paramenter groupId missing'
 卡的类型不存在: 'Card type not exist'
 '缺少必要字段，新创建卡失败！': 'Missing required fields, failed to create the card.'
 '缺少必要字段，请明确卡的类型': 'Missing required fields, please specify the card type.'
+'Account #%userId% is not exist.': 'Account #%userId% is not exist.'
 '充值金额必须为整数!': 'The recharge amount must be integer.'
 '充值购买': 'Recharge to buy'
 订单不存在，取消订单失败！: 'Order not exist, failed to cancel the order.'
@@ -2518,6 +2568,8 @@ keywordType参数不正确: 'keywordType parameter is not correct'
 '第%col%列重复:': 'Column number %col% is duplicated:'
 '第%row%行    %key%': 'Row number %row%   %key%'
 '购买课程《%title%》(管理员添加)': 'Purchase course "%title%" (allow the administrator to add)'
+'message must be a string': 'message must be a string'
+'UNKNOWN IMPORTER TYPE: %importerType%': 'UNKNOWN IMPORTER TYPE: %importerType%'
 'Excel格式不正确': 'Excel format is not correct!'
 'Excel超过1000行数据': 'Excel data over 1000 lines!'
 第%row%行班级号为%classroomId%的班级未发布，请检查。: 'The row%row classroomId% class is not published,please check'
@@ -3204,55 +3256,3 @@ Firefox浏览器: Firefox
 结束时间不能早于或等于开始时间: 'The end time should not be later than the started time.'
 '有效期必须大于等于当前日期': 'Expiration date must be later than or equals the current date.  '
 '%display%的长度必须等于%length%': 'The length of %display% must be %length%.'
-折: 折
-'1 GB': '1 GB'
-'mp4, mp3': 'mp4, mp3'
-'mp4, avi, flv, wmv, mov, m4v': 'mp4, avi, flv, wmv, mov, m4v'
-mp4: mp4
-mp3: mp3
-500M: 500M
-'ppt, pptx': 'ppt, pptx'
-'pdf,doc,docx': 'pdf,doc,docx'
-2M: 2M
-'流畅 <span class="text-muted">(适合PPT讲解)</span>': 'Smooth <span class="text-muted">(Suitable for PPT illustration)</span>'
-'标准 <span class="text-muted">(适合屏幕录制、摄像头拍摄)</span>': 'Standard <span class="text-muted">(Suitable for screen recording or camera capturing)</span>'
-'精细 <span class="text-muted">(适合动态电影)</span>': 'High-quality <spanS class="text-muted">(Suitable for motion pictures)</span>'
-最近一周: Last week
-最近两周: Two Weeks before
-最近一个月: Last month
-最近两个月: Two months before
-最近三个月: Three months before
-是: Yes
-否: No
-'其他支付': 'Other payment'
-'购买者用户名': 'Buyer's Name'
-随机生成: Created randomly
-按难易程度: According to difficulty
-整个课程: The whole course
-按课时范围: According to lesson's category
-提示信息: Tips
-警告信息: Attention
-我要提问: Ask a question
-'详细描述你的问题': 'Describe your question in detail.'
-'请输入私信内容': 'Please enter content for the private message.'
-收信人用户名: Recipent's Username
-想要说的话: what to say
-资讯频道: News channel
-可用: Accessible
-'我正在学习《%course%》，收获巨大哦，一起来学习吧！': 'I'm learning 《%course%》，it's really rewarding,let's keep learning together!'
-'我正在学习「%classroom%」，收获巨大哦，一起来学习吧！': 'I'm learning 「%classroom%」,it's really rewarding，let's keep learning together!'
-'我正在看「%articletitle%」，关注「%sitename%」，分享知识，成就未来。': 'I'm eenjoying「%articletitle%」,please follow「%sitename%」; Sharing knowledge makes a better future!'
-我正在「%groupname%」小组，看到「%threadname%」，很不错哦，一起来看看吧！: I'm now part of the group「%groupname%」,and check out 「%threadname%」,it's really fantastic ,come and join with me!
-小组频道: Groups
-搜索小组: Search a group
-' 将学校装进口袋，移动学习，随时随地。': ' A whole knowledge base right in your pocket.Enjoy knowledge no matter where you are'
-系统: System
-'无解析': 'Parse failed'
-'<span class="text-muted">未回答</span>': '<span class="text-muted">unanswered</span>'
-PPT: PPT
-Flash: Flash
-'--': '--'
-'%threadtitle%-成员.xls': '%threadtitle%-member.xls'
-'Account #%userId% is not exist.': 'Account #%userId% is not exist.'
-'message must be a string': 'message must be a string'
-'UNKNOWN IMPORTER TYPE: %importerType%': 'UNKNOWN IMPORTER TYPE: %importerType%'
