--- a/src/Classroom/ClassroomBundle/Resources/translations/messages.en_US.yml
+++ b/src/Classroom/ClassroomBundle/Resources/translations/messages.en_US.yml
@@ -5,7 +5,7 @@
 '正在加入...': 'Joining ...'
 正在创建订单...: 'Creating order ...'
 '预览模式无法加入学习%role%': 'Cannot join %role% in preview mode.'
-'共有<span>%courseNum%</span>门课程': 'Total number of courses: <span>%courseNum%</span>'
+'共有<span>%courseNum%</span>门课程': '%courseNum% Courses Contained'
 发表于%name%: 'Posted in %name%'
 '已删除': Deleted
 '您的退款申请已提交，请等待管理员的处理。': 'Your refund request has been sumbitted, please wait for processing.'
@@ -71,8 +71,8 @@
 只能有限参与: 'You can only participate part of it'
 '购买成为正式学员后即可完整学习': 'Buy and learn the whole course'
 '成为正式学员后即可完整学习': 'Buy and learn the whole course'
-'now''|date(''m'') }}{{''月': 'now''|date(''m'') }}{{''Month'
-'now''|date(''d'') }}{{''日': 'now''|date(''d'') }}{{'' Day'
+'now''|date(''m'') }}{{''月': 'now''|date(''m'') }}{{''/'
+'now''|date(''d'') }}{{''日': 'now''|date(''d'') }}{{'''
 签到: 'Check In'
 连续%keepDays%天: 'Day %keepDays% in a row'
 签到排名：今日第: 'Rank in today: '
